--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mikro-orm/migrations": "~6.4.3",
     "@mikro-orm/sql-highlighter": "~1.0.1",
     "@mikro-orm/sqlite": "~6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
     "@tsed/common": "^7.84.1",
     "@tsed/core": "^7.84.1",
     "@tsed/di": "^7.84.1",
