added application debug command

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ BOT_ACTIVITY_TYPE="PLAYING" # PLAYING, STREAMING, LISTENING, WATCHING, CUSTOM, C
 # ARISCORP_APPLICANT_ROLE_ID="791029669944229908"
 # ARISCORP_BOT_ROLE_ID="791030773561688084"
 # ARISCORP_INTERNAL_CHANNEL_ID="1000715810274291783"
+# ARISCORP_APPLICATIONS_CATEGORY_ID="1396841976221012079"
