--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ BOT_ACTIVITY_TYPE="PLAYING" # PLAYING, STREAMING, LISTENING, WATCHING, CUSTOM, C
 # ARISCORP_FOUNDERS_ROLE_ID="791020555015946281"
 # ARISCORP_MANAGEMENT_ROLE_ID="1000713788779143218"
 # ARISCORP_APPLICANT_ROLE_ID="791029669944229908"
+# ARISCORP_GUEST_ROLE_ID="1055454232838406184"
 # ARISCORP_BOT_ROLE_ID="791030773561688084"
 # ARISCORP_INTERNAL_CHANNEL_ID="1000715810274291783"
 # ARISCORP_APPLICATIONS_CATEGORY_ID="1396841976221012079"
